--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "owezzy.github.io",
   "version": "1.0.0",
   "description": "responsive web based portfolio",
-  "main": "index.js",
+  "main": "index.js", 
+  "homepage": "https://owezzy.github.io/owezzy",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -15,8 +17,8 @@
   "bugs": {
     "url": "https://github.com/owezzy/owezzy.github.io/issues"
   },
-  "homepage": "https://github.com/owezzy/owezzy.github.io#readme",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.9.2"
   }
 }
