--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "responsive web based portfolio",
   "main": "index.html",
-  "homepage": "https://github.com/owezzy/owezzy.github.io/dist",
+  "homepage": "https://github.com/owezzy/owezzy.github.io/",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
