--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "owezzy.github.io",
   "version": "1.0.0",
   "description": "responsive web based portfolio",
-  "main": "index.html",
-  "homepage": "https://github.com/owezzy/owezzy.github.io/",
+  "main": "index.js",
+  "homepage": "https://github.com/owezzy/owezzy.github.io",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
